# esp32s3-n16r8-cam

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
components/espressif__led_strip/src/: led_strip_spi_dev.c
docs/: architecture.md  development.md  hardware.md  web-api.md  web-ui.md
main/: CMakeLists.txt  Kconfig.projbuild  ai_pipeline.cpp  ai_pipeline.h  at_command.c  at_command.h  camera_driver.c  camera_driver.h  config_manager.c  config_manager.h  flash_led.c  flash_led.h  frame_broadcaster.c  frame_broadcaster.h  idf_component.yml  main.c  mjpeg_streamer.c  mjpeg_streamer.h  onvif_discovery.c  onvif_discovery.h  onvif_service.c  onvif_service.h  rtsp_server.cpp  rtsp_server.h  status_led.c  status_led.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/web_ui/: app.js  i18n.js  index.html  style.css
